Cleanup some copy logic